Fix  #198 : Bug Z-index dans la recherche

--- a/assets/css/modules/_search.scss
+++ b/assets/css/modules/_search.scss
@@ -15,6 +15,9 @@
     margin-top: space(2);
     max-width: 100%;
     width: 100%;
+    position: relative;
+    z-index: 1;
+    
     @include up(850) {
       flex-grow: 1;
       margin-left: 70px;
